# geohashit

./: .dockerignore  .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  README.md  TESTING.md  geohashit.py  pyproject.toml  requirements.txt  server.py  start
.github/: CODEOWNERS
.github/workflows/: docker.yml  release.yml  test.yml
benchmarks/: benchmark_cover.py
benchmarks/fixtures/: france-mainland.geojson  paris-city.geojson
geohashit/: __init__.py  app.py  cover.py  metadata.py  nominatim.py  openapi.py  place.py  validation.py
geohashshape/: __init__.py  geohash_shape.py
modules/: City.py  Country.py  Geohasher.py  Nominatim.py
tests/: some_test.py  test_benchmarks.py
