[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geohashit"
version = "0.1.0"
description = "Flask API for converting places and GeoJSON shapes into geohash coverage polygons."
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "Flask==3.1.3",
    "gunicorn==26.0.0",
    "pygeohash==3.3.0",
    "requests==2.34.2",
    "Shapely==2.1.2",
]

[project.urls]
Repository = "https://github.com/wmorin/geohashit"

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "ruff==0.15.20",
]

[tool.hatch.build.targets.wheel]
packages = ["geohashit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
